# HomeWorkWEB9

./: .gitignore  api_key.txt  index.rst  models.py  pyproject.toml
HomeWorkWEB10/: pyproject.toml
HomeWorkWEB11/HomeWorkWEB11/: pyproject.toml
HomeWorkWEB11/HomeWorkWEB11/migration/versions/: 92b591854e45_init.py
HomeWorkWEB12/: pyproject.toml
HomeWorkWEB12 – копія/: main.py  pyproject.toml
HomeWorkWEB12 – копія/migration/versions/: 2df34023f2d2_role.py  4898839fc808_add_table_users.py  66e66722fcb1_init.py
HomeWorkWEB12 – копія/src/database/: fu_db.py  models.py
HomeWorkWEB12 – копія/src/repository/: users.py
HomeWorkWEB12 – копія/src/routes/: contacts.py
HomeWorkWEB12 – копія/src/schemas/: user.py
HomeWorkWEB12 – копія/src/services/: auth.py  roles.py
