[tool.poetry]
name = "homeworkweb9"
version = "0.1.0"
description = ""
authors = ["DSofiya <134394822+DSofiya@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
itemadapter = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
